--- a/project.html
+++ b/project.html
@@ -23,6 +23,7 @@
     <script src="js/restart.js"></script>
     <script src="js/wordPicker.js"></script>
     <script src="js/hint.js"></script>
+    <script src="js/overScreen.js"></script>
     <script src="js/game.js"></script>
 
 </body>
